{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 63,
  "lineage": "a69349a0-b854-2483-cea4-8b79f83d74d3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_nginx_bastien_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-18T06:11:16.391-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/shaped-storm-374910/global/firewalls/allow-nginx-bastien",
            "log_config": [],
            "name": "allow-nginx-bastien",
            "network": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/networks/network-vpc",
            "priority": 101,
            "project": "shaped-storm-374910",
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/firewalls/allow-nginx-bastien",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "bastien"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "nginx"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_name.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_nginx_web_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-18T06:11:16.398-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/shaped-storm-374910/global/firewalls/allow-nginx-web",
            "log_config": [],
            "name": "allow-nginx-web",
            "network": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/networks/network-vpc",
            "priority": 102,
            "project": "shaped-storm-374910",
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/firewalls/allow-nginx-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "nginx"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_name.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_bastien_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-18T06:11:17.292-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/shaped-storm-374910/global/firewalls/allow-bastien-ssh",
            "log_config": [],
            "name": "allow-bastien-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/networks/network-vpc",
            "priority": 100,
            "project": "shaped-storm-374910",
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/firewalls/allow-bastien-ssh",
            "source_ranges": [
              "195.83.153.148"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastien"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_name.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.bastien",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20221206",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/zones/europe-central2-a/disks/bastien"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/shaped-storm-374910/zones/europe-central2-a/instances/bastien",
            "instance_id": "9083499261737976042",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "sohaibex:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILoD8XqZqhGfLfJtrGCzqu904VkmJbaQBtkiPB6mNFLt sohaibex"
            },
            "metadata_fingerprint": "RN3ukKilx-M=",
            "name": "bastien",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.193.48",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/networks/network-vpc",
                "network_ip": "10.186.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/regions/europe-central2/subnetworks/network-vpc",
                "subnetwork_project": "shaped-storm-374910"
              }
            ],
            "project": "shaped-storm-374910",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/zones/europe-central2-a/instances/bastien",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastien"
            ],
            "tags_fingerprint": "RR-YIg6irOU=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "module.vpc_name.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.nginx-app",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20221206",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/zones/europe-central2-a/disks/nginx-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/shaped-storm-374910/zones/europe-central2-a/instances/nginx-app",
            "instance_id": "796789386605379818",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "sohaibex:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILoD8XqZqhGfLfJtrGCzqu904VkmJbaQBtkiPB6mNFLt sohaibex"
            },
            "metadata_fingerprint": "RN3ukKilx-M=",
            "name": "nginx-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.190.218",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/networks/network-vpc",
                "network_ip": "10.186.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/regions/europe-central2/subnetworks/network-vpc",
                "subnetwork_project": "shaped-storm-374910"
              }
            ],
            "project": "shaped-storm-374910",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/zones/europe-central2-a/instances/nginx-app",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "nginx"
            ],
            "tags_fingerprint": "ZEhOlPNyE1c=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "module.vpc_name.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_name",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/shaped-storm-374910/global/networks/network-vpc",
            "mtu": 0,
            "name": "network-vpc",
            "project": "shaped-storm-374910",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/shaped-storm-374910/global/networks/network-vpc"
          }
        }
      ]
    }
  ]
}